--- a/HTML/css/projectStyle.css
+++ b/HTML/css/projectStyle.css
@@ -4,7 +4,7 @@
      width: 100%;
      /* margin-left: 0; */
     background: #0593d3;
-    position: fixed;
+    position: relative;
     /* top:0;
     margin-bottom: 5px; */
     font-size: 20px;
@@ -55,3 +55,14 @@
         font-size: 30px;
         position: absolute; */
     }
+
+/* 主体修饰区 */
+
+.zhu{
+margin-top: 20px;
+font-family:SimSun;
+
+}
+.zhu span{
+    font-size: 30px ;
+}
