--- a/HTML/css/projectStyle.css
+++ b/HTML/css/projectStyle.css
@@ -99,6 +99,10 @@ margin-top: 20px;
     padding: 14px 16px;
     text-decoration: none;
 }
+#celan span{
+    font-size: 10px ;
+
+}
 /* #celan a:hover{
     background-color:#0482ba;
 } */
